fix covered anchor links; back to top button shadow

--- a/_sass/academic/_layout.scss
+++ b/_sass/academic/_layout.scss
@@ -526,6 +526,7 @@
  */
 .page-content {
   padding: $spacing-unit 0 $spacing-unit / 2 0;
+  margin-bottom: 5em;
 }
 
 .post-content {
